# OpenXet

./: .gitignore  Cargo.toml  README.md
src/: auth.rs  cas.rs  error.rs  handlers.rs  lfs.rs  main.rs  pack.rs  protocol.rs  storage.rs
src/api/: auth.rs  handlers.rs  lfs.rs  mod.rs
src/api/hf_api/: handlers.rs  mod.rs  routes.rs  types.rs
src/cas/: store.rs
src/db/: mod.rs
src/db/entities/: access_token.rs  cas_block.rs  cas_chunk.rs  discussion.rs  discussion_comment.rs  discussion_event.rs  file_segment.rs  git_object.rs  git_ref.rs  lfs_chunk.rs  lfs_object.rs  mod.rs  org_member.rs  pr_comment.rs  pr_event.rs  pull_request.rs  repo_like.rs  repository.rs  user.rs
src/git/: mod.rs  pack.rs  protocol.rs  storage.rs
src/storage/: backend.rs  config.rs  local.rs  mod.rs  s3.rs
src/web_ui/: mod.rs  routes.rs  templates.rs
src/web_ui/routes/: auth_handlers.rs  diff.rs  discussion_handlers.rs  edit_handlers.rs  home_handlers.rs  lfs.rs  like_handlers.rs  org_handlers.rs  pr_handlers.rs  repo_handlers.rs  token_handlers.rs  tree_ops.rs  trending_handlers.rs  utils.rs
src/web_ui/templates/: base.html  blob.html  commit.html  commits.html  community.html  discussion.html  discussions.html  edit.html  error.html  index.html  login.html  new_discussion.html  new_org.html  new_pr.html  new_repo.html  pr_detail.html  pr_list.html  repo.html  repo_base.html  repos.html  search.html  signup.html  tokens.html  tree.html  trending.html  user.html
src/web_ui/templates/components/: dropdown.html  modal.html
