[package]
name = "git-xet-server"
version = "0.1.0"
edition = "2021"
description = "A secure Git-Xet server using pure Rust libraries"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors", "set-header"] }
hyper = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async utilities
async-trait = "0.1"
futures = "0.3"
bytes = "1"
tokio-util = { version = "0.7", features = ["io", "compat"] }
http-body-util = "0.1"

# Error handling
thiserror = "2"
anyhow = "1"

# Hashing and crypto
blake3 = "1.5"
sha1 = "0.10"
sha2 = "0.10"
argon2 = "0.5"           # Secure password hashing
rand = "0.8"             # Cryptographic RNG for tokens
subtle = "2"             # Constant-time comparison

# Compression (for pack files)
flate2 = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
parking_lot = "0.12"
dashmap = "6"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
crossbeam-channel = "0.5"

# Database (SQLite with SeaORM)
sea-orm = { version = "1", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sea-query = "0"

# S3 storage backend
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"
aws-smithy-types = "1"

# Web UI (optional - can be removed along with src/web_ui/)
tera = "1"
once_cell = "1"
pulldown-cmark = "0.10"
ammonia = "4"

[dev-dependencies]
tempfile = "3"
